--- a/front-web-react/src/App.css
+++ b/front-web-react/src/App.css
@@ -7,9 +7,17 @@
 h1,h2,h3,h4,h5,h6{
     font-weight: 700;
     margin-bottom: 0;    
+    color: rgb(96, 91, 91);
 }
 
 a, a:hover{
     text-decoration: none;
     color: unset;
 }
+
+
+.base-card {   
+    background-color: #fff;
+    box-shadow: 0px 4px 20px rgb(0, 0, 0, 0.25);
+    border-radius: 10px;  
+  }
