Creation Page Home

--- a/front-web-react/src/pages/ListCompetitors/styles.css
+++ b/front-web-react/src/pages/ListCompetitors/styles.css
@@ -15,3 +15,11 @@
     background-color: red;    
 }
 
+.color-btn-update{
+    background-color: green;
+    padding: 0 8px;
+    display: flex;
+    align-items: center;
+    border: solid 2px;    
+}
+
