--- a/front-web-react/src/components/CardRunWay/styles.css
+++ b/front-web-react/src/components/CardRunWay/styles.css
@@ -1,23 +1,37 @@
-.hiking-card{
-    margin-bottom: 30px;
-    padding: 10px;
+.hiking-card {
+  margin-bottom: 30px;
+  padding: 1px 10px; 
 }
-.card-top-container{
-    display: flex;
-    flex-direction: column;
-    padding: 16px 2px;
-   
-   
+.card-top-container {
+  display: flex;
+  flex-direction: column;
+  padding: 16px 2px;
 }
 
-.card-top-container img{
-    width: 200px;
-    height: 100px;
-    padding-left: 10px;
-    border-bottom: 2px solid #e1e1e1;
-   
+.card-top-container img {
+  width: 200px;
+  height: 100px;
+  padding-left: 10px;
+  border-bottom: 2px solid #e1e1e1;
 }
 
-.card-description{
-    text-align: center;
+.card-description {
+  text-align: center;
+}
+
+.card-button {  
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  
+}
+
+.trash-btn{
+padding-top: 25px;
+}
+
+
+.update-btn{
+    padding-top: 25px;
+    padding-left: 45px;
 }
