Created Method Get to View of Runner

--- a/front-web-react/src/pages/ListRunners/styles.css
+++ b/front-web-react/src/pages/ListRunners/styles.css
@@ -6,14 +6,13 @@
     padding: 5px 60px;
 }
 
-.container-btns{
+.btn-container{
     display: flex;
     justify-content: space-between;
+    align-items: center;    
 }
 
-.upbutton{
-    padding-top: 8px;
-}
+
 
 .color-btn-update{   
     padding: 0 8px;
